--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,12 @@
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
   "outputDirectory": "dist",
+  "functions": {
+    "api/transcribe.js": {
+      "memory": 3008,
+      "maxDuration": 60
+    }
+  },
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "handle": "filesystem" },
